--- a/app/src/main/res/xml/headers_preference.xml
+++ b/app/src/main/res/xml/headers_preference.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <header android:fragment="ca.mrrobot.symplecal.MyPreferenceFragment"
-        android:title="Goto: Preference fragment"
-        android:summary="An example of some preferences." />
+    <header android:fragment="ca.mrrobot.symplecal.PersonalSettings"
+        android:title="Personal Settings"
+        android:summary="Age, weight, Calories, etc" />
+
+    <header android:fragment="ca.mrrobot.symplecal.AppSettings"
+        android:title="App Settings"
+        android:summary="Various settings" />
 
 </preference-headers>
