--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,10 +28,11 @@
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/enterCal"
         android:layout_below="@+id/textView"
         android:layout_alignStart="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignEnd="@+id/textView"
+        android:imeOptions="actionGo"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,7 +60,7 @@
         android:text="Cal. Deficit"
         android:id="@+id/textView2"
         android:layout_marginTop="127dp"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/enterCal"
         android:layout_alignStart="@+id/static1" />
 
     <TextView
